# jsprog

./: .drone.yml  .gitignore  .gitmodules  .hgignore  Makefile.am  README.md  TODO  autogen.sh  configure.ac
autotools/: ac_python_module.m4
data/: Makefile.am
data/devices/usbV06a3P075c/: type.xml
data/devices/usbV06a3P0763/: type.xml
data/devices/usbV06a3P0bac/: saitekYokeJS1.profile  type.xml
data/devices/usbV06a3P0c2d/: type.xml
data/devices/usbV294bP1901/: type.xml
data/old/devices/usbV046dPc283/: wingman.profile
data/old/devices/usbV06a3P075c/: x52.profile
data/old/devices/usbV06a3P0bac/: saitekYokeJS.profile
debian/: changelog  control  copyright  gbp.conf  jsprog-client.install  jsprog-data.install  jsprogd.README.Debian  jsprogd.install  jsprogd.postinst  jsprogd.postrm  jsprogd.udev  rules
debian/patches/: 0001-libexecpath.patch  series
misc/: Makefile.am  hu.varadiistvan.JSProgGUI.desktop  joysticks.txt  jsprog.desktop  jsprog.gresource.xml  proba.profile  saitekYoke.profile  saitekYokeJS.profile  saitekYokeJS1.profile  wingman.profile  wingman1.profile  wingman2.profile  x52.profile
po/: Makefile.am  hu.po
scripts/: Makefile.am  axes  axes2cc.py  axes2py.py  dbusGetJoysticks.sh  dbusIntrospect.sh  dbusLoadProfile.sh  dbusMonitor.sh  dbusStartControlSignals.sh  dbusStopControlSignals.sh  drone-build.sh  drone-debian-binary.sh  jsprog  jsprog.in  keys  keys2cc.py  keys2py.py  rel  rel2cc.py  test.lua  x52test.profile
src/: Makefile.am  jsprog.xml  jsproglistener.xml
src/client/: Makefile.am  jsprog.sh
src/client/jsprog/: Makefile.am  _autoconf.py.in  action.py  common.py  const.py  device.py  joystick.py  jsprog.py  parser.py  profile.py  util.py
src/client/jsprog/gui/: Makefile.am  common.py  gicommon.py  gui.py  joystick.py  jsctxtmenu.py  jsmenu.py  jsview.py  jswindow.py  profileseditor.py  scndpopover.py  statusicon.py  typeeditor.py  vceditor.py
src/daemon/: .srcmessage  Axis.cc  Axis.h  Control.cc  Control.h  DBusAdaptor.cc  DBusAdaptor.h  DBusHandler.cc  DBusHandler.h  GLibEPoll.cc  GLibEPoll.h  INotify.cc  INotify.h  InputDeviceListener.cc  InputDeviceListener.h  Joystick.cc  Joystick.h  JoystickHandler.cc  JoystickHandler.h  Key.cc  Key.h  Log.cc  Log.h  LuaRunner.cc  LuaRunner.h  LuaState.cc  LuaState.h  LuaThread.cc  LuaThread.h  Makefile.am  Profile.cc  Profile.h  Relative.cc  Relative.h  UInput.cc  UInput.h  dbus.cc  dbus.h  hu.varadiistvan.JSProg.service.in  jsprogd.cc  (+2 more)
src/sim/: joysim.py  python-evdev-0.4.1.patch  saitekYoke.py  wingman.py
