dist_bin_SCRIPTS=jsprog

EXTRA_DIST=\
        axes                            \
        axes2cc.py                      \
        axes2py.py                      \
        dbusGetJoysticks.sh             \
        dbusIntrospect.sh               \
        dbusLoadProfile.sh              \
        dbusMonitor.sh                  \
        dbusStartControlSignals.sh      \
        dbusStopControlSignals.sh       \
        keys                            \
        keys2cc.py                      \
        keys2py.py                      \
        rel                             \
        rel2cc.py                       \
        test.lua                        \
        x52test.profile
